<resources>
    <string name="app_name">FitFolio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_motto">An App for Everyday Health and Wellness</string>
    <string name="email_text_box">Email</string>
    <string name="password_text_box">Password</string>
    <string name="login_button">Login</string>
    <string name="new_user">New user? Get started!</string>
</resources>
