<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/loginScreenAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/shrikhand"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/loginScreenAppMotto"
        app:layout_constraintEnd_toEndOf="@+id/loginScreenAppMotto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginScreenAppMotto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="103dp"
        android:fontFamily="@font/roboto"
        android:text="@string/app_motto"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/loginScreenEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenAppName" />

    <EditText
        android:id="@+id/loginScreenEmailAddress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="Email"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/ic_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/email_text_box"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="0dp"
        android:paddingEnd="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginScreenPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenAppMotto"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/loginScreenPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/ic_password_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/password_text_box"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginScreenLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenEmailAddress"
        tools:targetApi="o" />

    <Button
        android:id="@+id/loginScreenLoginButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/login_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/loginScreenNewUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenPassword" />

    <TextView
        android:id="@+id/loginScreenNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="251dp"
        android:fontFamily="@font/roboto"
        android:text="@string/new_user"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginScreenLoginButton" />

</android.support.constraint.ConstraintLayout>